tools/tests/errors/surf_exc_01.ki
# throwing an uncaught user-exception object reports it (with a traceback)
class MyError:
    var _init_ = Function(self, msg):
        self.msg = msg
throw MyError("boom")
